# dictation

./: .dir-locals.el  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  NOTES.md  README.md  cabal.project  shell.nix
deprecated/dictation-fsnotify/sources/Dictation/FSNotify/: Run.hs  Types.hs
deprecated/dictation-server-guest/sources/Dictation/Servers/Windows/: Types.hs
deprecated/dictation-server-host/: default.nix
deprecated/dictation-server-host/examples/Example/Dictation/Servers/: Windows.hs
dictation-fsnotify/: dictation-fsnotify.cabal
dictation-fsnotify/sources/: Dictation.hs  Prelude_dictation_fsnotify.hs
dictation-fsnotify/sources/Dictation/: FSNotify.hs  Types.hs
dictation-fsnotify/sources/Dictation/FSNotify/: Run.hs  Types.hs
dictation-fsnotify/sources/Internal/Dictation/: FSNotify.hs
dictation-server/: dictation-server.cabal
dictation-server-guest/sources/Dictation/Servers/: Windows.hs
dictation-server-host/: dictation-server-windows.cabal  shell.nix
dictation-server-host/sources/Prelude/Dictation/Servers/: Windows.hs
dictation-server/executables/: Example.hs
dictation-server/sources/: Prelude_dictation_server.hs
dictation-server/sources/Dictation/: Server.hs
dictation-server/sources/Dictation/Server/: API.hs  CLI.hs  SQL.hs  Types.hs
dictation-server/sources/Dictation/Server/CLI/: Types.hs
dictation-tools/: dictation-tools.cabal
dictation-tools/mandimus/: wordUtils.py
natlink-client-dll/docs/: NOTES.txt
nix/: dictation-server.nix  libraries.nix  nixpkgs.json  nixpkgs.nix  packages.nix  programs.nix  project.nix  shell.nix
nix/nixpkgs/: nixpkgs.json
scripts/: run-cabal2nix.sh  run-direnv.sh  run-nix-prefetch-git.sh
