name:                dictation-server-windows
version:             0.0.0
cabal-version:       >=1.24

-- `x-revision` must be incremented on every hackage metadata revision. 
-- `x-_` means "an extension field". 
-- x-revision: 0

----------------------------------------

build-type:          Simple 
category:            Data 
synopsis:            TODO 
description:         
 .
 TODO
 . 

homepage:            http://github.com/sboosali/dictation-server-windows#readme
bug-reports:         http://github.com/sboosali/dictation-server-windows/issues
author:              Spiros Boosalis
maintainer:          Spiros Boosalis <samboosalis@gmail.com>
copyright:           2018 Spiros Boosalis
license:             BSD3
license-file:        LICENSE.txt
stability:           provisional
tested-with:
  -- GHC == 7.10.3
  -- GHC == 8.0.2
  GHC == 8.2.2
  -- GHC == 8.4.3

----------------------------------------

extra-source-files:
  README.md
  NOTES.md
  -- stack.yaml
  -- LICENSE.txt ???

-- data-files:
--   data/

----------------------------------------

source-repository head
  type:     git
  location: git://github.com/sboosali/dictation-server-windows.git
  -- subdir: dictation-server-windows

-- source-repository this
--   type:     git
--   location: https://github.com/sboosali/dictation-server-windows/tree/v0.1.0
-- -- subdir: dictation-server-windows
-- 
-- -- Update the `source-repository` for `this` package version on every release
-- -- (i.e. every hackage upload or metadata revision).  
-- -- Assuming you've created a git tag with that version, 
-- -- (e.g. `git tag -a v0.1.0 -m "Hackage Release of Version 0.1.0" && git push origin v0.1.0`). 

----------------------------------------
-- FLAGS

----------------------------------------
-- LIBRARY

library

 hs-source-dirs:
   sources
   examples


 exposed-modules:
   Dictation.Servers.Windows
   Dictation.Servers.Windows.Types

   Example.Dictation.Servers.Windows

 other-modules:
   Prelude.Dictation.Servers.Windows
   -- Paths_dictation_server_windows

 -- autogen-modules:
   -- Paths_dictation_server_windows


 build-depends:

 --------------------
 -- boot libraries / "standard" library
 --------------------

    base >=4.7 && <5
  , text 
  , bytestring
  , transformers
  , mtl
  , containers

  --------------------
  -- my packages
  -- (sboosali on github, sboo on hackage)
  --------------------

  , spiros >=0.2
  -- , enumerate >=0.2 

  --------------------
  -- "extended" standard library 
  --------------------

  , deepseq
  , hashable
  , unordered-containers

  --------------------
  -- ekmett 
  --------------------

  , exceptions
  , lens

  --------------------
  -- Web
  --------------------

  , servant-client         >= 0.14
  , servant-server         >= 0.14
  , servant-matrix-param
  
  , servant-py
  , servant-js
  , servant-nix

  --------------------
  -- (miscellaneous packages)
  --------------------

  -- ,



 ghc-options:

  --------------------
  -- warning groups
  --------------------

  -Wall

  --------------------
  -- disabled warnings
  --------------------

  -Wno-unticked-promoted-constructors

  --------------------
  -- enabled warnings
  --------------------

  -- enable
  -Wincomplete-uni-patterns
  -Wincomplete-record-updates
  -Widentities
  -Wmissing-methods
  -fwarn-tabs
 
  --------------------
  -- typed-holes
  --------------------

  -- use `typed-holes`, not `undefined`, during development

  -fdefer-typed-holes
  -Wtyped-holes

  --------------------
  -- (miscellaneous warnings)
  --------------------

  -- raise a warning into an error
  -- -Werror=missing-fields


 if impl(ghc >= 8.0)
    ghc-options:

        --------------------
        -- warning groups
        --------------------     
        -Wcompat
      
        --------------------
        -- enabled warnings
        --------------------
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances

        --------------------


 default-language: Haskell2010

 default-extensions:

   --------------------
   -- "controversial"
   --------------------
   NoImplicitPrelude
   -- NOTE thus every module implicitly has -XNoImplicitPrelude
   
   --------------------
   -- deriving
   --------------------
   AutoDeriveTypeable
   DeriveDataTypeable
   DeriveGeneric
   DeriveFunctor
   DeriveFoldable
   DeriveTraversable
   DeriveLift
   StandaloneDeriving

   --------------------
   -- syntax
   --------------------
   PackageImports
   LambdaCase
   EmptyCase
   TypeOperators
   PostfixOperators
   BangPatterns
   KindSignatures
   NamedFieldPuns
   RecordWildCards
   TupleSections
   MultiWayIf
   DoAndIfThenElse
   EmptyDataDecls
   InstanceSigs
   
   --------------------
   -- typeclasses
   --------------------
   MultiParamTypeClasses
   FlexibleContexts
   FlexibleInstances
   TypeFamilies
   FunctionalDependencies

   --------------------
   -- patterns
   --------------------
   ViewPatterns
   PatternSynonyms

   --------------------
   -- (miscellaneous extensions)
   --------------------
   ScopedTypeVariables

 other-extensions:

   --------------------
   -- macros
   --------------------
   TemplateHaskell
   -- QuasiQuotes

   --------------------
   -- syntax (of literals)
   --------------------
   OverloadedStrings
   OverloadedLists

   --------------------
   -- (miscellaneous extensions)
   --------------------
   -- RebindableSyntax
   -- kinds
   -- DataKinds ConstraintKinds
   -- harmful to inference
   -- GADTs RankNTypes
   -- (miscellaneous)



----------------------------------------
-- TESTS...

----------------------------------------

test-suite doctest
 if (impl(ghcjs))
    buildable: False

 hs-source-dirs:      test
 main-is:             DocTests.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , dictation-server-windows
  , doctest

----------------------------------------
-- NOTES

-- originally generated from the `spirosboosalis-simple.hsfiles` template, with `stack new`:
-- 
-- $ stack new dictation-server-windows https://raw.githubusercontent.com/sboosali/configuration/master/stack/templates/spirosboosalis.hsfiles 

----------------------------------------
